--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Medic</string>
     <string name="image_text">Фотографии</string>
+    <string name="profile">Profile</string>
+    <string name="delete">Delete</string>
 </resources>
